06/22/2003 Bob Rossi <bob_rossi@cox.net>

	* include/helptext.h: updating using ht.pl.
	* src/ht.pl: Make it generate include/helptext.h instead of src/helptext.h

06/21/2003 Bob Rossi <bob_rossi@cox.net>

	* command_lexer.h: Add EOL to enumeration. Fix compile error.

06/21/2003 Peter Kovacs <peter@kovax.org>

    * command_lexer.l: Return EOL token when scanning \n\r combinations
    * commands.c: Handle line counting, line-continuation characters.  Don't
      bomb out when parsing empty lines.

06/19/2003 Bob Rossi <bob_rossi@cox.net>

	* cgdb.h: Added function cgdb_set_esc_sequence_timeout
	* cgdb.c: Implemented function cgdb_set_esc_sequence_timeout
	* commands.c: Added option escdelay that configures the input library
	* input.h: Added input_set_escape_sequence_timeout_value
	* input.c: Implemented input_set_escape_sequence_timeout_value

06/19/2003 Bob Rossi <bob_rossi@cox.net>

	* interface.h: Added if_highlight_viewer
	* sources.h: Added a language to each list_node.
	* commands.c: Added new command 'syntax' to highlight the current
	file to a certain language.
	* highlight.c: changed highlight, to not find out the file_type,
	that job is done by the tokenizer now.
	* interface.c: Added if_highlight_sviewer
	* sources.c: load_file Set the default language of the new file
	* tokenizer.h: add tokenizer_get_default_file_type
	* tokenizer.c: implemented tokenizer_get_default_file_type

06/17/2003 Ben Schomp <ben@benschomp.com>

    * changed source window shrink and grow functions:
    '-' shrinks source window 1 line
    '=' grows source window 1 line
    '_' shrinks source window 25%, or if tty window is visible
        shrinks tty window 1 line
    '+' grows source window 25%, or if tty window is visible,
        grows tty window 1 line

06/17/2003 Bob Rossi <bob_rossi@cox.net>

	* sources.c: Make sure orig_buf is valid.

06/17/2003 Bob Rossi <bob_rossi@cox.net>

	* Makefile.am: Added tokenizer directory to compile script